apps/calcom/k8s/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calcom
  labels:
    app.kubernetes.io/managed-by: chant
    chant.intentius.io/stack: calcom

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calcom
  labels:
    app.kubernetes.io/managed-by: chant
    chant.intentius.io/stack: calcom
    app: calcom
  annotations:
    secrets.infisical.com/auto-reload: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calcom
  template:
    metadata:
      labels:
        app: calcom
    spec:
      containers:
        - name: calcom
          image: docker.io/calcom/cal.com:v6.1.5-arm
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: '250m'
              memory: '768Mi'
            limits:
              memory: '2Gi'
          startupProbe:
            httpGet:
              path: /auth/login
              port: http
            periodSeconds: 10
            failureThreshold: 45
          readinessProbe:
            httpGet:
              path: /auth/login
              port: http
            periodSeconds: 15
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 30

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: calcom
  labels:
    app.kubernetes.io/managed-by: chant
    chant.intentius.io/stack: calcom
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cal.jakegaylor.com`)
      kind: Rule
      services:
        - name: calcom
          port: 3000
  tls:
    secretName: calcom-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: calcom-http
  labels:
    app.kubernetes.io/managed-by: chant
    chant.intentius.io/stack: calcom
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`cal.jakegaylor.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: default
      services:
        - name: calcom
          port: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: calcom
  labels:
    app.kubernetes.io/managed-by: chant
    chant.intentius.io/stack: calcom
    app: calcom
spec:
  type: ClusterIP
  selector:
    app: calcom
  ports:
    - name: http
      port: 3000
      targetPort: http
